# analytics-engineer-bootcamp

./: .dockerignore  .env  .env.example  .env.template  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.astro/: config.yaml
analytics_engineer_bootcamp.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
change_data_capture/: surface_iceberg_catalog_in_snowflake.sql  users_timezone_postgres_cdc.sql
change_data_capture/nba/: 1.nba_player_state_hist_tables.sql  2.nba_player_cdc_flow_proc.sql  3.nba_player_scd_views.sql  4.nba_player_cdc_call.sql
dags/: massive_stock_prices_dag.py  timezone_changes_audit_dag.py
dags/week1/: massive_stock_prices_dag.py
include/: dataexpert_postgres.py  dataexpert_snowflake.py  helper.py  load_earnings_transcripts_into_snowflake.py  load_sec_filings_into_snowflake.py  load_world_inequality_reports_into_snowflake.py  polygon_stock_prices.py  postgres_queries.py  postgres_to_snowflake.py  process_documents_with_cortex.py  sec_earnings_cortex_examples.sql  snowflake_queries.py  trino_queries.py
include/world_inequality_reports_rag/: ai_query_world_inequality_reports.py  load_world_inequality_reports_into_snowflake.py  process_world_inequality_reports.py  queries.py  rag_retrive_context.sql  wir_image_transform.sql  wir_schemas.sql  wir_text_transform.sql
include/world_inequality_reports_rag/sql/: idea.sql  rag_retrive_context.sql  wir_image_transform.sql  wir_schemas.sql  wir_text_transform.sql
