[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "analytics-engineer-bootcamp"
version = "0.1.0"
description = "Analytics engineer bootcamp project"
authors = [
  { name="Miguel" }
]
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]